# COMP2510_blackjack_c

./: CMakeLists.txt  README.md  card.c  card.h  deck.c  deck.h  demo.c  demo.h  game.c  game.h  main.c  player.c  player.h
